@@ -184,7 +184,7 @@ Returns zero on success, one on error.  <p>
  
 <h2><a name='sect5' href='#toc5'>Author</a></h2>
 hashdeep was
-written by Jesse Kornblum, md5deep [at] jessekornblum [dot] com. <p>
+written by Jesse Kornblum, research [at] jessekornblum [dott] com. <p>
  
 <h2><a name='sect6' href='#toc6'>Known
 Issues</a></h2>
@@ -203,27 +203,27 @@ the forensic integrity of this program could have serious consequenses
 on  people's lives. When submitting a bug report, please include a description
 of the problem, how you found it, and your contact information. <p>
 Send bug
-reports to: md5deep [at] jessekornblum [dot] com <p>
+reports to the author at the address above. <p>
  <p>
 
 <h2><a name='sect8' href='#toc8'>Copyright</a></h2>
-This program
-is a work of the US Government. In accordance with 17 USC 105, copyright
-protection is not available for any work of the US Government. This program
-is PUBLIC DOMAIN. Portions of this program contain code that is licensed
-under the terms of the General Public License (GPL). Those portions retain
-their original copyright and license. See the file COPYING for more details.
-<p>
-There is NO warranty for this program;  not even for MERCHANTABILITY or
-FITNESS FOR A PARTICULAR PURPOSE. <p>
+This program is a
+work of the US Government. In accordance with 17 USC 105, copyright protection
+is not available for any work of the US Government. This program is PUBLIC
+DOMAIN. Portions of this program contain code that is licensed under the
+terms of the General Public License (GPL). Those portions retain their original
+copyright and license. See the file COPYING for more details. <p>
+There is NO
+warranty for this program;  not even for MERCHANTABILITY or FITNESS FOR
+A PARTICULAR PURPOSE. <p>
  
 <h2><a name='sect9' href='#toc9'>See Also</a></h2>
-More information and installation
-instructions can be found in the README  file. Current versions of both
-documents can be found on the project homepage:  <a href='http://md5deep.sourceforge.net/'>http://md5deep.sourceforge.net/</a>
-
-<p>
-The MD5 specification, RFC 1321, is available at <br>
+More information and installation instructions
+can be found in the README  file. Current versions of both documents can
+be found on the project homepage:  <a href='http://md5deep.sourceforge.net/'>http://md5deep.sourceforge.net/</a>
+ <p>
+The MD5
+specification, RFC 1321, is available at <br>
 <a href='http://www.ietf.org/rfc/rfc1321.txt'>http://www.ietf.org/rfc/rfc1321.txt</a>
  <p>
 The SHA-1 specification, RFC 3174, is available
