@@ -182,7 +182,7 @@ Unicode characters in its name by using tab completition or an asterisk
 Returns zero on success, one on error. 
 
 .SH AUTHOR
-hashdeep was written by Jesse Kornblum, md5deep [at] jessekornblum [dot] com.
+hashdeep was written by Jesse Kornblum, research [at] jessekornblum [dott] com.
 
 .SH KNOWN ISSUES
 Using the \-r flag cannot be used to recursively process all files 
@@ -199,8 +199,7 @@ forensic integrity of this program could have serious consequenses on
 people's lives. When submitting a bug report, please include a description
 of the problem, how you found it, and your contact information.
 .PP
-Send bug reports to:
-md5deep [at] jessekornblum [dot] com
+Send bug reports to the author at the address above.
 
 .PP
 .SH COPYRIGHT
