@@ -1,3 +1,9 @@
+2010-02-25 Jesse Kornblum
+
+	* Changed all contact email addresses to research account at
+	  jessekornblum.com. The 'md5deep' account will be deprecated.
+	
+
 2010-01-09 Jesse Kornblum
 
 	* Finished updating download links. Updated and published
